--- a/GuessTheFlag/Base.lproj/Main.storyboard
+++ b/GuessTheFlag/Base.lproj/Main.storyboard
@@ -1,24 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z3N-tQ-D6R">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GuessTheFlag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f4v-RR-0Yd">
+                                <rect key="frame" x="95" y="100" width="224" height="100"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="italy"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwh-WK-gba">
+                                <rect key="frame" x="95" y="230" width="224" height="100"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="italy"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T6k-lK-Pcg">
+                                <rect key="frame" x="95" y="360" width="224" height="114"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="italy"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="xwh-WK-gba" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="142" id="6Mj-0W-OSf"/>
+                            <constraint firstItem="xwh-WK-gba" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="CBY-ug-MzK"/>
+                            <constraint firstItem="T6k-lK-Pcg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FWe-im-FBG"/>
+                            <constraint firstItem="T6k-lK-Pcg" firstAttribute="top" secondItem="xwh-WK-gba" secondAttribute="bottom" constant="30" id="Tas-6f-9Sn"/>
+                            <constraint firstItem="xwh-WK-gba" firstAttribute="top" secondItem="f4v-RR-0Yd" secondAttribute="bottom" constant="30" id="WmR-7e-Zys"/>
+                            <constraint firstItem="f4v-RR-0Yd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ZCt-2T-3KW"/>
+                            <constraint firstItem="T6k-lK-Pcg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="272" id="agY-uj-dC4"/>
+                            <constraint firstItem="f4v-RR-0Yd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="12" id="cNd-Wd-z8C"/>
+                            <constraint firstItem="T6k-lK-Pcg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fLm-cH-GC1"/>
+                            <constraint firstItem="xwh-WK-gba" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fRi-m6-AML"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="bpl-7V-mWO"/>
+                    <connections>
+                        <outlet property="button1" destination="f4v-RR-0Yd" id="qkr-Zf-6md"/>
+                        <outlet property="button2" destination="xwh-WK-gba" id="jXO-Im-QlK"/>
+                        <outlet property="button3" destination="T6k-lK-Pcg" id="EPs-c7-Hea"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="780" y="72"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vLt-Y2-m4B">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="z3N-tQ-D6R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="V3S-Ih-fUi">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="SAE-59-7TB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5F1-Nm-0zb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="71.651785714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="italy" width="200" height="100"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
